# vulkan_cmake_glfw_glm

./: .clang-format  CMakeLists.txt  FirstApp.cpp  FirstApp.hpp  KeyboardMovementController.cpp  LveBuffer.hpp  LveCamera.cpp  LveCamera.hpp  LveDescriptors.cpp  LveDescriptors.hpp  LveDevice.cpp  LveDevice.hpp  LveFrameInfo.cpp  LveFrameInfo.hpp  LveGameObject.cpp  LveGameObject.hpp  LveModel.cpp  LveModel.hpp  LvePipeline.cpp  LvePipeline.hpp  LveRenderer.cpp  LveRenderer.hpp  LveSwapChain.cpp  LveSwapChain.hpp  LveUtils.cpp  LveUtils.h  LveUtils.hpp  LveWindow.cpp  LveWindow.hpp  README.md  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  envUnixExample.cmake  envWindowsExample.cmake  main.cpp
shaders/: light_point.frag  light_point.vert  simple_shader.frag  simple_shader.vert
src/: FirstApp.cpp  FirstApp.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  LveBuffer.cpp  LveBuffer.hpp  LveCamera.cpp  LveCamera.hpp  LveDescriptors.cpp  LveDescriptors.hpp  LveDevice.cpp  LveDevice.hpp  LveFrameInfo.cpp  LveFrameInfo.hpp  LveGameObject.hpp  LveModel.cpp  LveModel.hpp  LvePipeline.cpp  LvePipeline.hpp  LveRenderer.cpp  LveRenderer.hpp  LveSwapChain.cpp  LveSwapChain.hpp  LveUtils.hpp  LveWindow.cpp  LveWindow.hpp  SimpleRenderSystem.cpp
src/systems/: LightPointSystem.cpp  LightPointSystem.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp
